# ImagingS

./: .gitignore  README.md  pyproject.toml  pyrightconfig.json  requirements.txt  setup.cfg  tools.ps1  tox.ini  tox_fatal.ini
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
ImagingS/: _Cache.py  _Color.py  _IdObject.py  _Point.py  __init__.py
ImagingS/Cli/: __main__.py  instruction.py
ImagingS/Gui/: __main__.py  app.py  converters.py  icons.py
ImagingS/Gui/graphic/: _Canvas.py  _DrawingItem.py  _PainterDrawingContext.py  __init__.py
ImagingS/brush/: _Brush.py  _Solid.py  __init__.py
ImagingS/core/: __init__.py  colors.py  drawing.py  geometry.py  transform.py
ImagingS/document/: _Document.py  _Version.py  __init__.py  json.py
ImagingS/drawing/: _Drawing.py  _DrawingContext.py  _GeometryDrawing.py  _Pen.py  _RenderContext.py  __init__.py
ImagingS/geometry/: _Curve.py  _Ellipse.py  _Geometry.py  _Line.py  _LineClipper.py  _Polygon.py  _Polyline.py  _Rectangle.py  __init__.py
ImagingS/serialization/: _Property.py  __init__.py  json.py
ImagingS/transform/: _Matrix.py  _Rotate.py  _Scale.py  _Skew.py  _Transform.py  _Translate.py
src/: main.py
src/ImagingS/: _Core.py  _IdObject.py  _Rect.py  _Size.py  __init__.py
test/: __init__.py  temp.py  test_basic.py  test_brush.py  test_geometry.py  test_transform.py  test_ui.py
test/cli/: test_instruction.py
test/core/: test_transform.py
test/document/: test_doc.py  test_document.py
test/gui/: test_ui.py  test_window.py
test/ui/: test_ui.py
ui/: compile.ps1
(+147 files in other folders)
