[metadata]
name = imagings
version = 1.0.1
author = StardustDL
author_email = stardustdl@163.com
description = A toolset for computer graphics and imaging processing.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/StardustDL/ImagingS
project_urls =
    Bug Tracker = https://github.com/StardustDL/ImagingS/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: Mozilla Public License 2.0 (MPL 2.0)
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7
install_requires = 
    numpy==1.21.0
    Pillow==8.4.0
    PyQt5==5.15.4
    qtawesome==1.0.3

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    imagings = ImagingS.Gui.__main__:main